
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pad ;


 size_t const PAD_MAX ;
 int die () ;
 char* memchr (char*,char,int) ;
 int memset (char* const,char,size_t const) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;

__attribute__((used)) static const char *
build_pad(const size_t p)
{

    if (p > 8192) die();
    static char pad[64 + 8192];
    strcpy(pad, "P=");
    char * const cp = memchr(pad, '\0', sizeof(pad));
    if (!cp) die();
    memset(cp, 'p', p);
    cp[p] = '\0';
    if (strlen(pad) != 2 + p) die();
    return pad;
}
