; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris_x86/local/extr_42270.c_build_pad.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris_x86/local/extr_42270.c_build_pad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@build_pad.pad = internal global [8256 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [3 x i8] c"P=\00", align 1
@PAD_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @build_pad to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @build_pad(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = icmp ugt i64 %4, 8192
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = call i32 (...) @die()
  br label %8

8:                                                ; preds = %6, %1
  %9 = call i32 @strcpy(i8* getelementptr inbounds ([8256 x i8], [8256 x i8]* @build_pad.pad, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %10 = call i8* @memchr(i8* getelementptr inbounds ([8256 x i8], [8256 x i8]* @build_pad.pad, i64 0, i64 0), i8 signext 0, i32 8256)
  store i8* %10, i8** %3, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %15, label %13

13:                                               ; preds = %8
  %14 = call i32 (...) @die()
  br label %15

15:                                               ; preds = %13, %8
  %16 = load i8*, i8** %3, align 8
  %17 = load i64, i64* %2, align 8
  %18 = call i32 @memset(i8* %16, i8 signext 112, i64 %17)
  %19 = load i8*, i8** %3, align 8
  %20 = load i64, i64* %2, align 8
  %21 = getelementptr inbounds i8, i8* %19, i64 %20
  store i8 0, i8* %21, align 1
  %22 = call i32 @strlen(i8* getelementptr inbounds ([8256 x i8], [8256 x i8]* @build_pad.pad, i64 0, i64 0))
  %23 = sext i32 %22 to i64
  %24 = load i64, i64* %2, align 8
  %25 = add i64 2, %24
  %26 = icmp ne i64 %23, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %15
  %28 = call i32 (...) @die()
  br label %29

29:                                               ; preds = %27, %15
  ret i8* getelementptr inbounds ([8256 x i8], [8256 x i8]* @build_pad.pad, i64 0, i64 0)
}

declare dso_local i32 @die(...) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i8* @memchr(i8*, i8 signext, i32) #1

declare dso_local i32 @memset(i8*, i8 signext, i64) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
